--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "core-js": "^3.37.1"
+    "core-js": "^3.37.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.0"
   }
 }
